--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "vee-validate": "^4.13.1",
