--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -13,10 +13,12 @@
         "lint:fix": "eslint . --fix"
     },
     "dependencies": {
+        "@nuxt/scripts": "^0.7.1",
         "axios": "^1.7.2",
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "nuxt": "^3.13.0",
+        "swiper": "^11.1.11",
         "vue": "latest"
     },
     "devDependencies": {
