--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -18,7 +18,8 @@
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "nuxt": "^3.13.0",
-        "swiper": "^11.1.11",
+        "nuxt-easy-lightbox": "^1.0.2",
+        "nuxt-swiper": "^1.2.2",
         "vue": "latest"
     },
     "devDependencies": {
