--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -18,6 +18,7 @@
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "nuxt": "^3.13.0",
+        "nuxt-app": "file:",
         "nuxt-easy-lightbox": "^1.0.2",
         "nuxt-swiper": "^1.2.2",
         "vue": "latest"
