--- a/vue/package.json
+++ b/vue/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "magento-ecommerce": "file:",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
