--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -15,12 +15,14 @@
     "dependencies": {
         "@nuxt/scripts": "^0.7.1",
         "axios": "^1.7.2",
+        "defu": "^6.1.4",
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "nuxt": "^3.13.0",
         "nuxt-easy-lightbox": "^1.0.2",
         "nuxt-swiper": "^1.2.2",
-        "vue": "latest"
+        "vue": "latest",
+        "vuex": "^4.1.0"
     },
     "devDependencies": {
         "eslint-config-prettier": "^9.1.0",
