--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -58,7 +58,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "pint": "pint"
+        "pint": "pint",
+        "dev": "php artisan serve",
+        "clear": "php artisan optimize:clear"
     },
     "extra": {
         "laravel": {
