--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -16,6 +16,7 @@
         "@nuxt/scripts": "^0.7.1",
         "@pinia/nuxt": "^0.5.4",
         "axios": "^1.7.7",
+        "dayjs": "^1.11.13",
         "defu": "^6.1.4",
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
