Update product detail for client

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -31,6 +31,7 @@
         "@types/js-cookie": "^3.0.6",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
+        "nuxt-lodash": "^2.5.3",
         "prettier": "^3.3.3"
     },
     "overrides": {
