--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -25,6 +25,7 @@
         "nuxt-easy-lightbox": "^1.0.2",
         "nuxt-swiper": "^1.2.2",
         "vue": "latest",
+        "vue3-toastify": "^0.2.3",
         "vuetify-nuxt-module": "^0.18.2"
     },
     "devDependencies": {
