--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -19,11 +19,11 @@
         "dayjs": "^1.11.13",
         "defu": "^6.1.4",
         "js-cookie": "^3.0.5",
-        "lodash": "^4.17.21",
         "nuxt": "^3.13.0",
         "nuxt-app": "file:",
         "nuxt-easy-lightbox": "^1.0.2",
         "nuxt-swiper": "^1.2.2",
+        "vee-validate": "^4.13.2",
         "vue": "latest",
         "vue3-toastify": "^0.2.3",
         "vuetify-nuxt-module": "^0.18.2"
