Add AI generate text for input component

--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "magento-ecommerce": "file:",
+    "marked": "^14.1.2",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
