--- a/vue/.env.example
+++ b/vue/.env.example
@@ -2,4 +2,5 @@ VITE_API_BASE_URL=http://127.0.0.1:8000/api/v1
 VITE_BASE_URL=http://127.0.0.1:5173
 VITE_LARAVEL_URL=http://127.0.0.1:8000
 VITE_NUXT_URL=http://127.0.0.1:3000/
+VITE_API_AI_GENERATE_TEXT=https://little-wind-8907.vungoctan-vnt63.workers.dev
 VITE_REFRESHTOKEN_EXPIRES=7
