Update address profile

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -73,3 +73,6 @@ VNPAY_HASH_SECRET=
 MOMO_PARTNER_CODE=
 MOMO_ACCESS_KEY=
 MOMO_SECRET_KEY=
+
+STRINGEE_ANSWER_URL=http://127.0.0.1:8000/stringee/answer
+STRINGEE_API_KEY=
