--- a/vue/package.json
+++ b/vue/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^1.16.1",
     "lodash": "^4.17.21",
     "magento-ecommerce": "file:",
     "marked": "^14.1.2",
+    "pusher-js": "^8.4.0-rc2",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.29",
     "vue-recaptcha-v3": "^2.0.1",
