Setup pusher for nuxt and vue

--- a/nuxt/.env.example
+++ b/nuxt/.env.example
@@ -1,3 +1,7 @@
-API_BASE_URL=http://127.0.0.1:8000/api/v1
-LARAVEL_URL=http://127.0.0.1:8000
-REFRESHTOKEN_EXPIRES=7
+API_BASE_URL=
+LARAVEL_URL=
+VUE_APP_URL=
+REFRESHTOKEN_EXPIRES=
+SESSION_ID_EXPIRES=
+PUSHER_APP_KEY=
+PUSHER_APP_CLUSTER=
