--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -23,6 +23,7 @@
         "nuxt-app": "file:",
         "nuxt-easy-lightbox": "^1.0.2",
         "nuxt-swiper": "^1.2.2",
+        "pusher-js": "^8.4.0-rc2",
         "vee-validate": "^4.13.2",
         "vue": "latest",
         "vue3-toastify": "^0.2.3",
