--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/octane": "^2.5",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
         "league/glide": "^2.3",
         "league/glide-laravel": "^1.0",
