--- a/vue/package.json
+++ b/vue/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.4.29",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.3.3",
+    "vue3-google-login": "^2.0.33",
     "vuex": "^4.0.2",
     "yup": "^1.4.0"
   },
