--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -26,6 +26,7 @@
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.17",
         "laravel/sail": "^1.18",
